# static-proto-c

./: .clang-format  .clangd  .gitignore  .gitmodules  .inferconfig  CMakeLists.txt  CMakePresets.json  bench.cpp  main.re2c.cpp  run.ps1  test.fbs  test2.fbs
lib/: lib.hpp
src/: base.cpp  base.hpp  bench.cpp  code_gen_stuff.cpp  code_gen_stuff.hpp  code_generation_static_data.hpp  codegen.cpp  codegen.hpp  common_data.hpp  constexpr_helpers.cpp  decode_code.cpp  decode_code.hpp  error.cpp  fast_math.cpp  fatal_error.cpp  fs.cpp  fs.hpp  generate_offsets.cpp  generate_offsets.hpp  global.hpp  helper_types.cpp  internal_error.cpp  io.cpp  lex_error.cpp  lex_helpers.re2c.cpp  lex_result.cpp  lexer.re2c.cpp  lexer_types.cpp  logger.cpp  main.cpp  main.re2c.cpp  memory.cpp  memory_helpers.cpp  parse_int.re2c.cpp  show_input_error.cpp  string_helpers.cpp  string_literal.cpp  tagged_ptr.cpp  tvs.hpp
src/container/: memory.hpp  memory_tagged_ptr.hpp
src/core/: AlignCounts.hpp  AlignMembersBase.hpp  AlignSizes.hpp  IntegralAlignMembersBase.hpp  SIZE.hpp
src/estd/: bound.hpp  class_constraints.hpp  concepts.hpp  const_copy.hpp  empty.hpp  enum.hpp  error.hpp  fixed_vector.hpp  functional.hpp  integral_pair.hpp  meta.hpp  ranges.hpp  type_traits.hpp  utility.hpp  vector.hpp  visit.hpp
src/fast_math/: log.hpp  pow.hpp  sum_of_digits.hpp
src/helper/: alloca.hpp  ce.hpp  cstdint_concepts.hpp  internal_error.hpp  thief.hpp
src/helper/flow_control/: control_kind.hpp  flow_control.hpp
src/layout/: ArrayPackInfo.hpp  FixedOffsets.hpp
src/layout/generation/: PendingVariantFieldPacks.hpp  QueuedField.hpp  VariantLeafMeta.hpp  field_queuing.hpp  generate.hpp  tvs.hpp
src/layout/generation/variant_layout/: perfect_st.hpp  sum_intersection_dp_bitset.hpp  variant_layout.hpp
src/layout_generation/: field_layout_queue.hpp  layout_data.hpp  layout_generation.hpp  tvs.hpp
src/layout_generation/variant_layout/: perfect_st.hpp  sum_intersection_dp_bitset.hpp  variant_layout.hpp
src/math/: mod1.hpp  multiples.hpp
src/parser/: lex_error.hpp  lex_helpers.re2c.hpp  lexer.re2c.hpp  lexer_types.hpp  memory_helpers.hpp  parse_int.re2c.hpp
src/subset_sum_solving/: dp_bitset_base.hpp  subset_sum_absorbed.hpp  subset_sum_perfect.hpp  sum_intersection_dp_bitset.hpp
src/sys/: errno.hpp  fs.hpp
src/util/: escape_sequences.hpp  logger.hpp  pack_holder.hpp  string_literal.hpp  string_view_equal.hpp  stringify.hpp  sys_info.hpp  tagged_ptr.hpp
src/variant_optimizer/: data.hpp  perfect_st.hpp
src/windows/: io.hpp
